<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ArView">

    <android.opengl.GLSurfaceView
        android:id="@+id/surfaceview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="top"/>

    <RadioGroup
        android:id="@+id/radio_camera_configs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio_low_res"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radio_low_res"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_low_res"/>
        <RadioButton
            android:id="@+id/radio_medium_res"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_medium_res"/>
        <RadioButton
            android:id="@+id/radio_high_res"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_high_res"/>
    </RadioGroup>

    <Switch
        android:id="@+id/switch_cv_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:checked="false"
        android:text="@string/switch_cv_mode"
        android:textColor="#ffffff" />
    <Switch
        android:id="@+id/switch_focus_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/switch_cv_mode"
        android:checked="false"
        android:text="@string/switch_focus_mode"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/camera_intrinsics_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:padding="20dp"
        android:textColor="#ffffff"/>

</RelativeLayout>